# orchestra

./: .gitignore  .mcp.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.orchestra/: README.md  roadmap.md
.orchestra/adr/: ADR-000-the-score.md  ADR-001-skills-served-whole-over-mcp.md  ADR-002-afk-first.md  ADR-003-the-repo-is-the-workspace.md  ADR-004-ntfy-gate-notifications.md
apps/afk-runner/: README.md  check-state.mjs  check-state.test.mjs  com.orchestra.afk-runner.plist  preflight.sh  run.sh  seed.sh
apps/agent/: package.json  wrangler.toml
apps/agent-lenny/: package.json  tsconfig.json  wrangler.toml
apps/agent/src/: agent.ts  (+2 more)
apps/mcp/: package.json  wrangler.toml
apps/mcp-sdlc/: package.json  wrangler.toml
apps/orchestra-pilot/: README.md  analyze.mjs  analyze.test.mjs  brief.md  preflight.sh  run.sh
apps/orchestra-pilot/runs/20260611T113805Z/workspace/: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  relnotes.toml.example
apps/orchestra-pilot/runs/20260611T113805Z/workspace/src/relnotes/: __init__.py  categorize.py  cli.py  commit.py  config.py  git.py  render.py
apps/orchestra-pilot/runs/20260611T113805Z/workspace/tests/: test_categorize.py  test_commit.py  test_integration.py  test_render.py
skills/orchestra-adr/: README.md  SKILL.md
skills/orchestra-afk/: SKILL.md
skills/orchestra-devlog/: HOW_TO_USE.md  INSTALL.md  README.md  SKILL.md
skills/orchestra-eval/: SKILL.md
skills/orchestra-gherkin/: README.md  SKILL.md
skills/orchestra-implement/: SKILL.md
templates/: check.sh  create.sh  template.test.mjs
(+121 files in other folders)
