[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relnotes"
version = "0.1.0"
description = "Generate polished, human-readable release notes from a git repository's commit history."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "relnotes contributors" }]
keywords = ["git", "release-notes", "changelog", "conventional-commits"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
# Intentionally zero runtime dependencies: relnotes shells out to the `git`
# binary and uses only the Python standard library. This keeps it trivial to
# install and run anywhere git is available.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/example/relnotes"
Source = "https://github.com/example/relnotes"

[project.scripts]
relnotes = "relnotes.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/relnotes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
